sass/px-app-nav-item.scss
/*
 * Copyright (c) 2018, General Electric
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Settings
@import "px-defaults-design/_settings.defaults.scss";
// Normalize (excerpt)
:host {
  color: $inuit-base-text-color;
  line-height: $inuit-base-line-height / $inuit-base-font-size; /* [1] */
  text-size-adjust: 100%; /* [4] */
  -moz-osx-font-smoothing: grayscale; /* [5] */
  -webkit-font-smoothing: antialiased; /* [5] */
}

// Generic
@import "px-box-sizing-design/_generic.box-sizing.scss";

// Component
/* Item State: Default */
$px-app-nav-item-height: var(--px-app-nav-height, calculateRem(60px));
$px-app-nav-item-padding: var(--px-app-nav-item-padding, calculateRem(15px));
$px-app-nav-item-icon-size: var(--px-app-nav-item-icon-size, calculateRem(30px));
$px-app-nav-item-icon-color: var(--px-app-nav-item-icon-color, darkgray);
$px-app-nav-item-text-color: var(--px-app-nav-item-text-color, darkgray);
$px-app-nav-item-background-color: var(--px-app-nav-item-background-color, lightgray);
:host {
  position: relative;
  display: flex;
  align-items: center;
  height: $px-app-nav-item-height;
  padding-left: $px-app-nav-item-padding;
  padding-right: $px-app-nav-item-padding;
  cursor: pointer;
  color: $px-app-nav-item-text-color;
  background-color: $px-app-nav-item-background-color;
  --iron-icon-stroke-color: $px-app-nav-item-icon-color;
}

/* Item State: Hover */
$px-app-nav-item-icon-color--hover: var(--px-app-nav-item-icon-color--hover, darkgray);
$px-app-nav-item-text-color--hover: var(--px-app-nav-item-text-color--hover, darkgray);
$px-app-nav-item-background-color--hover: var(--px-app-nav-item-background-color--hover, lightgray);
:host(:hover) {
  color: $px-app-nav-item-text-color--hover;
  background-color: $px-app-nav-item-background-color--hover;
  --iron-icon-stroke-color: $px-app-nav-item-icon-color--hover;
}

/* Item State: Pressed */
$px-app-nav-item-icon-color--pressed: var(--px-app-nav-item-icon-color--pressed, darkgray);
$px-app-nav-item-text-color--pressed: var(--px-app-nav-item-text-color--pressed, darkgray);
$px-app-nav-item-background-color--pressed: var(--px-app-nav-item-background-color--pressed, lightgray);
:host(:active) {
  color: $px-app-nav-item-text-color--pressed;
  background-color: $px-app-nav-item-background-color--pressed;
  --iron-icon-stroke-color: $px-app-nav-item-icon-color--pressed;
}

/* Item State: Selected */
$px-app-nav-item-icon-color--selected: var(--px-app-nav-item-icon-color--selected, darkgray);
$px-app-nav-item-text-color--selected: var(--px-app-nav-item-text-color--selected, darkgray);
$px-app-nav-item-background-color--selected: var(--px-app-nav-item-background-color--selected, white);
$px-app-nav-item-stripe-size--selected: var(--px-app-nav-item-stripe-size--selected, calculateRem(2px));
$px-app-nav-item-stripe-color--selected: var(--px-app-nav-item-stripe-color--selected, blue);
:host([selected]) {
  color: $px-app-nav-item-text-color--selected;
  background-color: $px-app-nav-item-background-color--selected;
  --iron-icon-stroke-color: $px-app-nav-item-icon-color--selected;
}
:host([selected]):before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  display: block;
  width: 100%;
  height: $px-app-nav-item-stripe-size--selected;
  background-color: $px-app-nav-item-stripe-color--selected;
}

/* Item State: Selected+Collapsed */
$px-app-nav-item-icon-color--collapsed: var(--px-app-nav-item-icon-color--collapsed, darkgray);
$px-app-nav-item-text-color--collapsed: var(--px-app-nav-item-text-color--collapsed, darkgray);
$px-app-nav-item-background-color--collapsed: var(--px-app-nav-item-background-color--collapsed, white);
:host([selected][collapsed]) {
  color: $px-app-nav-item-text-color--collapsed;
  background-color: $px-app-nav-item-background-color--collapsed;
  --iron-icon-stroke-color: $px-app-nav-item-icon-color--collapsed;
}
:host([selected][collapsed]):before {
  top: 0;
  left: 0;
  bottom: 0;
  right: auto;
  height: 100%;
  width: $px-app-nav-item-stripe-size--selected;
}

/* Item State: Selected+Overflowed */
:host([selected][overflowed]) {
  background-color: $px-app-nav-item-background-color;
}

/* Item State: Empty */
$px-app-nav-item-background-color--empty: var(--px-app-nav-item-background-color--empty, lightgray);

/* Sub-components */
.app-nav-item__label {
  margin: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
:host([overflowed]) .app-nav-item__label,
:host([collapsed]) .app-nav-item__label {
  flex: 1 1 auto;
}
.app-nav-item__label--empty {
  display: block;
  width: calculateRem(100px);
  height: calculateRem(10px);
  background-color: $px-app-nav-item-background-color--empty;
}

.app-nav-item__icon {
  --iron-icon-height: $px-app-nav-item-icon-size;
  --iron-icon-width: $px-app-nav-item-icon-size;
}
.app-nav-item__icon--with-label {
  margin-right: calculateRem(5px);
}
.app-nav-item__icon--empty {
  display: block;
  width: $px-app-nav-item-icon-size;
  height: $px-app-nav-item-icon-size;
  background-color: $px-app-nav-item-background-color--empty;
  flex: none;
}

.app-nav-item__dropdown-icon {
  --iron-icon-height: calculateRem(20px);
  --iron-icon-width: calculateRem(20px);
  margin-left: calculateRem(3px);
}

:host([only-show-icon]) .app-nav-item__label {
  display: none;
}

:host([only-show-icon]) .app-nav-item__label,
:host([only-show-icon]) .app-nav-item__dropdown-icon {
  display: none;
}

